#cargo-features = ["named-profiles"]

[package]
name = "iota-streams"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams"]
description = "A Rust implementation of the IOTA Streams"
repository = "https://github.com/iotaledger/streams"
homepage = "https://wiki.iota.org/streams/libraries/rust/overview"

autoexamples = false

[lib]
name = "iota_streams"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
    "iota-streams-core",
    "iota-streams-core-edsig",
    "iota-streams-core-keccak",
    "iota-streams-ddml",
    "iota-streams-app",
    "iota-streams-app-channels",
    "bindings/wasm",
]

# Members selected by default by Cargo commands like `test`
default-members = [
    "iota-streams-core",
    "iota-streams-ddml",
    "iota-streams-app",
    "iota-streams-app-channels",
    # TODO: Fix clippy warnings in wasm bindings
    # "bindings/wasm",
]

exclude = [
    "bindings/c",
    "examples",
]

[features]
default = ["std", "client"]
# Enable `std` feature in dependencies
std = ["iota-streams-core/std", "iota-streams-core-edsig/std", "iota-streams-ddml/std", "iota-streams-app/std", "iota-streams-app-channels/std"]
tangle = ["iota-streams-app/tangle", "iota-streams-app-channels/tangle"]
client = ["iota-streams-app/client", "tangle"]
wasm-client = ["iota-streams-app/wasm-client", "iota-streams-app-channels/wasm-client", "tangle"]
err-location-log = ["iota-streams-core/err-location-log"]
sync-spin = ["iota-streams-app/sync-spin", "iota-streams-core/sync-spin"]
sync-parking-lot = ["iota-streams-app/sync-parking-lot", "std", "iota-streams-core/sync-parking-lot"]

[dependencies]
iota-streams-core = { version = "0.1.2", path = "iota-streams-core", default-features = false }
iota-streams-core-keccak = { version = "0.1.2", path = "iota-streams-core-keccak", default-features = false }
iota-streams-core-edsig = { version = "0.1.2", path = "iota-streams-core-edsig", default-features = false }
iota-streams-ddml = { version = "0.1.2", path = "iota-streams-ddml", default-features = false }
iota-streams-app = { version = "0.1.2", path = "iota-streams-app", default-features = false }
iota-streams-app-channels = { version = "0.1.2", path = "iota-streams-app-channels", default-features = false }

#[profile.release-nostd]
#inherits = "release"
#opt-level = 's'
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = "abort"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
#panic = 'abort'
