#cargo-features = ["named-profiles"]

[package]
name = "iota-streams"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams"]
description = "A Rust implementation of the IOTA Streams"
repository = "https://github.com/iotaledger/streams"
homepage = "https://wiki.iota.org/streams/libraries/rust/overview"

autoexamples = false

[lib]
name = "iota_streams"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
    "iota-streams-core",
    "iota-streams-ddml",
    "iota-streams-app",
    "iota-streams-app-channels",
]

# Members selected by default by Cargo commands like `test`
default-members = [
    "iota-streams-core",
    "iota-streams-ddml",
    "iota-streams-app",
    "iota-streams-app-channels",
]

exclude = [
    #"bindings/c",
    #"bindings/wasm",
    "examples",
]

[features]
default = ["std", "tangle", "client"]
# Enable `std` feature in the subpackages
std = ["iota-streams-core/std", "iota-streams-ddml/std", "iota-streams-app/std", "iota-streams-app-channels/std"]
# Enable Tangle-specific abstractions and API in iota-streams-app and iota-streams-app-channels
tangle = ["iota-streams-app/tangle", "iota-streams-app-channels/tangle"]
# Enable Tangle transport client implementation (implies `tangle` feature)
client = ["iota-streams-app/client", "iota-streams-app-channels/client", "tangle"]
# Enable Tangle wasm-compatible client implementation (incompatile with `client` feature due to `iota-client/async` using `tokio`)
wasm-client = ["iota-streams-app/wasm-client", "iota-streams-app-channels/wasm-client"]
# Enable debug logging when fallible functions return Result::Err
err-location-log = ["iota-streams-core/err-location-log"]
# Enable synchronized transports using spin
sync-spin = ["iota-streams-app/sync-spin", "iota-streams-core/sync-spin"]
# Enable synchronized transports using parking-lot (implies `std`)
sync-parking-lot = ["iota-streams-app/sync-parking-lot", "iota-streams-core/sync-parking-lot", "std"]
# Enable Iota Identity logic for User identification/authentication
did = ["iota-streams-app/did", "iota-streams-app-channels/did"]

[dependencies]
iota-streams-core = { version = "0.1.2", path = "iota-streams-core", default-features = false }
iota-streams-ddml = { version = "0.1.2", path = "iota-streams-ddml", default-features = false }
iota-streams-app = { version = "0.1.2", path = "iota-streams-app", default-features = false }
iota-streams-app-channels = { version = "0.1.2", path = "iota-streams-app-channels", default-features = false }

#[profile.release-nostd]
#inherits = "release"
#opt-level = 's'
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = "abort"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
#panic = 'abort'
