#cargo-features = ["named-profiles"]

[package]
authors = [
  "Vlad Semenov <vlad.semenov@iota.org>",
  "Dyrell Chapman <dyrell.chapman@iota.org>",
  "Brord van Wierst <brord@iota.org>",
  "Arnau Orriols <arnau.orriols@iota.org",
]
description = "A Rust implementation of the IOTA Streams"
edition = "2018"
homepage = "https://wiki.iota.org/streams/libraries/rust/overview"
keywords = ["iota", "streams"]
license = "Apache-2.0/MIT"
name = "iota-streams"
readme = "README.md"
repository = "https://github.com/iotaledger/streams"
version = "0.1.2"

autoexamples = false

[lib]
name = "iota_streams"

[workspace]
members = [
  "iota-streams-core",
  "iota-streams-core-edsig",
  "iota-streams-core-keccak",
  "iota-streams-ddml",
  "iota-streams-app",
  "iota-streams-app-channels",
]

# Members selected by default by Cargo commands like `test`
default-members = [
  "iota-streams-core",
  "iota-streams-ddml",
  "iota-streams-app",
  "iota-streams-app-channels", # TODO: Fix clippy warnings in wasm bindings  # "bindings/wasm",
]

exclude = [
  "bindings/c",
  "bindings/wasm",
  "examples",
]

[features]
default = ["std", "tangle", "client"]
# Enable `std` feature in the subpackages
std = ["iota-streams-core/std", "iota-streams-core-edsig/std", "iota-streams-ddml/std", "iota-streams-app/std", "iota-streams-app-channels/std"]
# Enable Tangle-specific abstractions and API in iota-streams-app and iota-streams-app-channels
tangle = ["iota-streams-app/tangle", "iota-streams-app-channels/tangle"]
# Enable Tangle transport client implementation (implies `tangle` feature)
client = ["iota-streams-app/client", "iota-streams-app-channels/client", "tangle"]
# Enable Tangle wasm-compatible client implementation (incompatile with `client` feature due to `iota-client/async` using `tokio`)
wasm-client = ["iota-streams-app/wasm-client", "iota-streams-app-channels/wasm-client"]
# Enable debug logging when fallible functions return Result::Err
err-location-log = ["iota-streams-core/err-location-log"]
# Enable synchronized transports using spin
sync-spin = ["iota-streams-app/sync-spin", "iota-streams-core/sync-spin"]
# Enable synchronized transports using parking-lot (implies `std`)
sync-parking-lot = ["iota-streams-app/sync-parking-lot", "iota-streams-core/sync-parking-lot", "std"]

[dependencies]
iota-streams-app = {version = "0.1.2", path = "iota-streams-app", default-features = false}
iota-streams-app-channels = {version = "0.1.2", path = "iota-streams-app-channels", default-features = false}
iota-streams-core = {version = "0.1.2", path = "iota-streams-core", default-features = false}
iota-streams-core-edsig = {version = "0.1.2", path = "iota-streams-core-edsig", default-features = false}
iota-streams-core-keccak = {version = "0.1.2", path = "iota-streams-core-keccak", default-features = false}
iota-streams-ddml = {version = "0.1.2", path = "iota-streams-ddml", default-features = false}

#[profile.release-nostd]
#inherits = "release"
#opt-level = 's'
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = "abort"

[dev-dependencies]
criterion = {version = "0.3.5", features = ["async_tokio", "html_reports"]}
goose = {version = "=0.16.0", default-features = false, features = ["rustls-tls"]}
iota-client = {version = "1.1.1"}
rand = {version = "0.7.3"}
tokio = {version = "1.15.0"}
anyhow = {version = "1.0.57"}
futures = {version = "0.3.17"}
gumdrop = {version = "0.8.1"}

[profile.release]
incremental = true
lto = true

[profile.bench]
incremental = true
lto = true

[[bench]]
harness = false
name = "mps"

[[bench]]
harness = false
name = "load"
