[package]
name = "LETS"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "LETS Framework", "LETS", "Streams", "Communication Protocol"]
description = "A Rust framework for developing cryptographic communication protocols"

[features]
default = ["std", "duh"]
# Enable `std` feature in dependencies
std = ["spongos/std", "hex/std"]
# Enable Tangle-specific transport abstractions
duh = []
# Enable the IOTA-Tangle transport client (implies `std` features)
tangle-client = ["iota-client/async", "futures", "duh", "std"]
# Enable the wasm-compatible IOTA-Tangle transport client (incompatile with `tangle-client` feature due to `iota-client/async` using `tokio`. Implies `std` feature)
tangle-client-wasm = ["iota-client/wasm", "futures", "duh", "std"]
# TODO: REMOVE
# # Enable synchronized transports using parking-lot
# sync-parking-lot = ["spongos/sync-parking-lot"]
# # Enable synchronized transports using spin 
# sync-spin = ["spongos/sync-spin"]

[dependencies]
# Local dependencies
spongos = { path = "../spongos", default-features = false }

# IOTA dependencies
iota-crypto = { version = "0.9.1", default-features = false }
iota-client = { version = "1.1.1", default-features = false, optional = true }
## Dependencies for "client" feature
futures = { version = "0.3.8", default-features = false, features = ["executor"], optional = true }

# 3rd-party dependencies
hex = { version = "0.4", default-features = false, optional = false }
cstr_core = { version = "0.2.2", default-features = false, features = ["alloc"] }
cty = { version = "0.2.1" }

[dev-dependencies]
# anyhow is used in doctests
anyhow = { version = "1.0", default-features = false, features = ["std"] }