[package]
name = "iota-streams-basic-scenario"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams"]
description = "A rust implementation of the IOTA Streams"

[dependencies]
# run with features = ["err-location-log"] for err location logging
iota-streams = { path = "..", features = ["tangle", "std", "client", "did"] }
identity = { git = "https://github.com/iotaledger/identity.rs", rev = "6f06a42" }
anyhow = { version = "1.0", default-features = false }
rand = "0.8"
dotenv = {version = "0.15.0"}
tokio = {version = "1.1"}
