[package]
name = "iota-mam-core-keccak"
version = "0.1.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "mam", "core"]
description = "A rust implementation of the IOTA MAM core utils"

[lib]
name = "iota_mam_core_keccak"
path = "src/lib.rs"

[dependencies]
iota-mam-core = { version = "0.1.0", path = "../iota-mam-core" }
keccak = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "keccak"
harness = false
