[package]
name = "iota-streams-app-channels-example"
version = "0.1.0"
authors = ["Vlad Semenov <semenov.vlad.by@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
# enable std
std = ["iota-streams-core/std", "iota-streams-core-keccak/std"] #, "iota-streams-app-channels/std"]
async = ["iota-streams-app-channels/async"]
tangle = ["iota-streams-app-channels/tangle"]

[dependencies]
wee_alloc = "0.4.5"
iota-streams-core = { version = "0.2.0", path = "../iota-streams-core", default-features = false }
iota-streams-core-keccak = { version = "0.2.0", path = "../iota-streams-core-keccak", default-features = false }
iota-streams-ddml = { version = "0.2.0", path = "../iota-streams-ddml", default-features = false }
iota-streams-app = { version = "0.2.0", path = "../iota-streams-app", default-features = false }
iota-streams-app-channels = { version = "0.2.0", path = "../iota-streams-app-channels", default-features = false }
