[package]
name = "iota-streams-app-channels-example"
version = "1.0.0"
authors = ["Vlad Semenov <semenov.vlad.by@gmail.com>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"

[features]
default = ["tangle"]
# enable std
std = ["iota-streams/std", "hex/std"]
async = ["iota-streams/async"]
tangle = ["iota-streams/tangle"]

[dependencies]
wee_alloc = "0.4.5"
iota-streams = { version = "1.0.0", path = "..", default-features = false}
hex = { version = "0.4", default-features = false}
#[profile.release]
##inherits = "release"
#opt-level = 's'
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = "abort"
