[package]
name = "iota-streams-app-channels"
version = "1.1.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "app", "channels"]
description = "A rust implementation of the IOTA Streams Channels Application"

[features]
default = ["std", "tangle", "sync-client"]
# Enable `std` feature in dependencies
std = ["iota-streams-core/std", "iota-streams-core-edsig/std", "iota-streams-ddml/std", "iota-streams-app/std", "hex/std"]
async = ["iota-streams-app/async"]
tangle = ["iota-streams-app/tangle"]
sync-client = ["iota-streams-app/sync-client", "tangle", "std"]
async-client = ["iota-streams-app/async-client", "tangle", "std", "async"]
wasm-client = ["iota-streams-app/wasm-client", "tangle", "std", "async"]

[lib]
name = "iota_streams_app_channels"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.3.1", path = "../iota-streams-core", default-features = false }
iota-streams-core-edsig = { version = "0.2.1", path = "../iota-streams-core-edsig", default-features = false }
iota-streams-core-keccak = { version = "0.3.1", path = "../iota-streams-core-keccak", default-features = false }
iota-streams-ddml = { version = "0.2.1", path = "../iota-streams-ddml", default-features = false }
iota-streams-app = { version = "1.1.0", path = "../iota-streams-app", default-features = false }

hex = { version = "0.4", default-features = false, optional = false }

[dev-dependencies]
smol = { version = "1.2.5" }
