[package]
name = "iota-streams-app"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "app"]
description = "A rust implementation of the IOTA Streams applications"

[features]
default = ["std", "client"]
# Enable `std` feature in dependencies
std = ["iota-streams-core/std", "iota-streams-ddml/std", "hex/std"]
# rust doesn't support async traits, `async-trait` crate emulates `async` keyword
# `async` implies `std` for now
tangle = []
client = ["iota-client/default", "futures", "tangle", "std"]
# `iota-client` support is implemented as a feature (as opposed to a separate crate) in order to
# implement Transport for iota_client::Client.
wasm-client = ["iota-client/wasm", "futures", "tangle", "std"]
sync-parking-lot = ["iota-streams-core/sync-parking-lot"]
sync-spin = ["iota-streams-core/sync-spin"]

[dependencies]
iota-streams-core = { version = "0.1.2", path = "../iota-streams-core", default-features = false }
iota-streams-ddml = { version = "0.1.2", path = "../iota-streams-ddml", default-features = false }

hex = { version = "0.4", default-features = false, optional = false }

iota-crypto = { version = "0.9.1", default-features = false }

# Dependencies for "client" feature
iota-client = { version = "1.1.1", default-features = false, optional = true }
futures = { version = "0.3.8", default-features = false, features = ["executor"], optional = true }

cstr_core = { version = "0.2.2", default-features = false, features = ["alloc"] }
cty = { version = "0.2.1" }

[dev-dependencies]
# anyhow is used in doctests
anyhow = { version = "1.0", default-features = false, features = ["std"] }