[package]
name = "iota-streams-app"
version = "0.1.2"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>", "Arnau Orriols <arnau.orriols@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "app"]
description = "A rust implementation of the IOTA Streams applications"

[features]
default = ["std", "client"]
# Enable `std` feature in dependencies
std = ["iota-streams-core/std", "iota-streams-core-edsig/std", "iota-streams-ddml/std", "hex/std"]
# Enable Tangle-specific transport abstractions
tangle = []
# Enable Tangle transport client implementation (implies `tangle` and `std` features)
client = ["iota-client/async", "futures", "tangle", "std"]
# Enable Tangle wasm-compatible client implementation (incompatile with `client` feature due to `iota-client/async` using `tokio`)
wasm-client = ["iota-client/wasm", "futures", "tangle", "std"]
# Enable synchronized transports using parking-lot
sync-parking-lot = ["iota-streams-core/sync-parking-lot"]
# Enable synchronized transports using spin 
sync-spin = ["iota-streams-core/sync-spin"]

[dependencies]
iota-streams-core = { version = "0.1.2", path = "../iota-streams-core", default-features = false }
iota-streams-core-edsig = { version = "0.1.2", path = "../iota-streams-core-edsig", default-features = false }
iota-streams-ddml = { version = "0.1.2", path = "../iota-streams-ddml", default-features = false }

hex = { version = "0.4", default-features = false, optional = false }

# Dependencies for "client" feature
iota-client = { version = "=1.1.1", default-features = false, optional = true }
futures = { version = "0.3.8", default-features = false, features = ["executor"], optional = true }

cstr_core = { version = "0.2.2", default-features = false, features = ["alloc"] }
cty = { version = "0.2.1" }

[dev-dependencies]
# anyhow is used in doctests
anyhow = { version = "1.0", default-features = false, features = ["std"] }