[package]
name = "iota-streams-core-edsig"
version = "0.1.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core", "edsig"]
description = "A rust implementation of the IOTA Streams Ed25519 signature scheme"

[lib]
name = "iota_streams_core_edsig"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.2.0", path = "../iota-streams-core" }
ed25519-dalek = "1.0.0"
x25519-dalek = "1.0.1"
curve25519-dalek = "3.0.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
