[package]
name = "iota-streams-core-edsig"
version = "0.2.1"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core", "edsig"]
description = "A rust implementation of the IOTA Streams Ed25519 signature scheme"

[features]
default = ["std"]
std = ["iota-streams-core/std", "ed25519-dalek/std", "x25519-dalek/std", "curve25519-dalek/std"]

[lib]
name = "iota_streams_core_edsig"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.3.1", path = "../iota-streams-core", default-features = false }
# TODO: move to recent versions of ed25519-dalek, x25519-dalek and curve25510-dalek
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["u64_backend", "rand_core", "rand"] }
x25519-dalek = { version = "1.1.0", default-features = false, features = ["u64_backend"] }
curve25519-dalek = { version = "3.0.0", default-features = false, features = ["u64_backend"] }
hashbrown = { version = "0.8.2", default-features = false, optional = false, features = ["ahash"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
