[package]
name = "iota-streams-core-keccak"
version = "0.2.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core", "keccak"]
description = "IOTA Streams Spongos adapter for Keccak"

[lib]
name = "iota_streams_core_keccak"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.2.0", path = "../iota-streams-core" }
keccak = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "keccak_transform"
harness = false

[[bench]]
name = "keccakb"
harness = false

[[bench]]
name = "keccakt"
harness = false
