[package]
name = "iota-streams-core-keccak"
version = "0.3.1"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core", "keccak"]
description = "IOTA Streams Spongos adapter for Keccak"

[features]
default = ["std"]
std = ["iota-streams-core/std"]

[lib]
name = "iota_streams_core_keccak"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.3.1", path = "../iota-streams-core", default-features = false }
keccak = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "keccak_transform"
harness = false

[[bench]]
name = "keccakb"
harness = false
