[package]
name = "iota-streams-core-merkletree"
version = "0.1.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core", "merkletree"]
description = "A rust implementation of traversable Merkle tree"

[lib]
name = "iota_streams_core_merkletree"
path = "src/lib.rs"
