[package]
name = "iota-streams-core-ntru"
version = "0.1.0"
authors = ["Vlad Semenov <vlad.semenov@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core", "ntru"]
description = "A rust implementation of the IOTA Streams NTRU key encapsulation"

[lib]
name = "iota_streams_core_ntru"
path = "src/lib.rs"

[dependencies]
iota-streams-core = { version = "0.1.0", path = "../iota-streams-core" }
rand = "0.7"

[dev-dependencies]
iota-streams-core-keccak = { version = "0.1.0", path = "../iota-streams-core-keccak" }
criterion = "0.3"

[[bench]]
name = "ntru_keccak"
harness = false

#[[bench]]
#name = "ntru_troika"
#harness = false
