[package]
name = "iota-streams-core"
version = "0.3.1"
authors = ["Vlad Semenov <vlad.semenov@iota.org>", "Dyrell Chapman <dyrell.chapman@iota.org>", "Brord van Wierst <brord@iota.org>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["iota", "streams", "core"]
description = "A rust implementation of the IOTA Streams core utils"

[features]
default = ["std"]
# enable std
std = ["rand/std", "digest/std", "hex/std"]
err-location-log = []

[lib]
name = "iota_streams_core"
path = "src/lib.rs"

[dependencies]
# digest version should correspond to curve25519-dalek's version
digest = { version = "0.9", default-features = false }
#rand_core = { version = "0.5", default-features = false }
rand = { version = "0.7", default-features = false, features = ["wasm-bindgen"]}
hashbrown = { version = "0.11.2", default-features = false, optional = false, features = ["ahash"] }
hex = { version = "0.4", default-features = false, optional = false, features = ["alloc"] }
anyhow = { version = "1.0.34", default-features = false, optional = false }

# thiserror = { version = "1.0.22", default-features = false, optional = false }
displaydoc = { version = "0.2", default-features = false, optional = false }

iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["blake2b"], branch = "dev" }

[dev-dependencies]
criterion = "0.3"
